test commit number 2 to index.html file

--- a/Meetup-Git-Test/public_html/index.html
+++ b/Meetup-Git-Test/public_html/index.html
@@ -5,13 +5,16 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>This is a Git Test</div>
-        <div>Added This</div>
-    </body>
+<head>
+    <title>TODO supply a title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+    <div>This is a Git Test</div>
+    <div>Added This is the original</div>
+    <div>Added This1</div>
+    <div>Added This2</div>
+    <div>Added This3</div>
+</body>
 </html>
