test commit number 3 to index.html file added some js

--- a/Meetup-Git-Test/public_html/index.html
+++ b/Meetup-Git-Test/public_html/index.html
@@ -15,6 +15,11 @@ and open the template in the editor.
     <div>Added This is the original</div>
     <div>Added This1</div>
     <div>Added This2</div>
-    <div>Added This3</div>
+    <div id="testDiv">Added This3</div>
+<script>
+
+    document.getElementById("testDiv").style.fontSize = "4em";
+
+</script>    
 </body>
 </html>
