Upgrade to select the unit type with radio buttons

--- a/response-tool.html
+++ b/response-tool.html
@@ -28,8 +28,13 @@
         <div class="headerStyle2" style="text-align:center; font-weight:bold;">
             <div style="color:red;">Slope Intercept Equation Maker</div>
             <div style="color:blue; margin:0px 10px;">Calculates proportional element, text, or property sizing to Viewport width</div>
-        </div>    
-        <br><br>
+        </div><br>    
+        <div style="background-color:#ff99ff; padding:5px; border:1px solid black; border-radius:3px; text-align:center;">Choose Unit for equation
+            <input type="radio" name="unit" value="vpWidth" checked>vpWidth&nbsp;&nbsp;&nbsp; 
+            <input type="radio" name="unit" value="vpHeight">vpHeight&nbsp;&nbsp;&nbsp;
+            <input type="radio" name="unit" value="viewWidth">viewWidth 
+        </div>
+        <br>
         <div id="equationPointsEntry">
             &nbsp;&nbsp;Enter first viewport width:
             <input class="equationPoints1" id="equationPoint1" type="number" value="1920">
