--- a/response-tool.html
+++ b/response-tool.html
@@ -29,15 +29,18 @@
             <div style="color:red;">Slope Intercept Equation Maker</div>
             <div style="color:blue; margin:0px 10px;">Calculates proportional element, text, or property sizing to Viewport width</div>
         </div><br>    
-        <div style="background-color:#ff99ff; padding:5px; border:1px solid black; border-radius:3px; text-align:center;">Choose Unit for equation
-            <input type="radio" name="unit" value="vpWidth" checked>vpWidth&nbsp;&nbsp;&nbsp; 
-            <input type="radio" name="unit" value="vpHeight">vpHeight&nbsp;&nbsp;&nbsp;
-            <input type="radio" name="unit" value="viewWidth">viewWidth 
-        </div>
+        <div style="text-align:center;">
+            <div style="background-color:#ff99ff; padding:5px 20px; border:1px solid black; border-radius:3px; text-align:center; display:inline-block;">
+                <span id="chooseUnitPhrase">Choose unit for equation</span><br>
+                <input type="radio" name="unit" value="vpWidth" checked>vpWidth&nbsp;&nbsp;&nbsp; 
+                <input type="radio" name="unit" value="vpHeight">vpHeight&nbsp;&nbsp;&nbsp;
+                <input type="radio" name="unit" value="viewWidth">viewWidth 
+            </div>
+        </div>    
         <br>
         <div id="equationPointsEntry">
             &nbsp;&nbsp;Enter first viewport width:
-            <input class="equationPoints1" id="equationPoint1" type="number" value="1920">
+            <input class="equationPoints1" id="equationPoint1" type="number" value="1170">
             <br><br>
             &nbsp;&nbsp;Enter first property size:
             <input class="equationPoints1" id="equationPoint2" type="number" value="5">
