--- a/response-tool.html
+++ b/response-tool.html
@@ -30,11 +30,11 @@
             <div style="color:blue; margin:0px 10px;">Calculates proportional element, text, or property sizing to Viewport width</div>
         </div><br>    
         <div style="text-align:center;">
-            <div style="background-color:#ff99ff; padding:5px 20px; border:1px solid black; border-radius:3px; text-align:center; display:inline-block;">
+            <div style="background-color:#ff99ff; padding:5px 30px; border:1px solid black; border-radius:3px; text-align:center; display:inline-block;">
                 <span id="chooseUnitPhrase">Choose unit for equation</span><br>
-                <input type="radio" name="unit" value="vpWidth" checked>vpWidth&nbsp;&nbsp;&nbsp; 
-                <input type="radio" name="unit" value="vpHeight">vpHeight&nbsp;&nbsp;&nbsp;
-                <input type="radio" name="unit" value="viewWidth">viewWidth 
+                <input type="radio" name="unit" value="vpWidth" checked><span class="unit">vpWidth&nbsp;&nbsp;&nbsp;</span> 
+                <input type="radio" name="unit" value="vpHeight"><span class="unit">vpHeight&nbsp;&nbsp;&nbsp;</span> 
+                <input type="radio" name="unit" value="viewWidth"><span class="unit">viewWidth</span>  
             </div>
         </div>    
         <br>
