--- a/response-tool.html
+++ b/response-tool.html
@@ -111,7 +111,7 @@
                     <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/outerWidth" target="_blank" style="float:right;">&nbsp;<span style="font-size:0.8em">&#128279;</span>(API)</a>
                 </td> 
                 <td class="dimenTable" style=""></td>
-                <td style="color:red;">Viewport size.</td> 
+                <td style="color:red;">Viewport outer width.</td> 
             </tr>
             <tr>
                 <td style="">window.outerHeight
@@ -119,7 +119,7 @@
                     <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/outerHeight" target="_blank" style="float:right;">&nbsp;<span style="font-size:0.8em">&#128279;</span>(API)</a>
                 </td> 
                 <td class="dimenTable" style=""></td>
-                <td style="color:red;">Viewport size.</td> 
+                <td style="color:red;">Viewport outer height.</td> 
             </tr>
             <tr>
                 <td style="">window.innerWidth
@@ -127,7 +127,7 @@
                     <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/innerWidth" target="_blank" style="float:right;">&nbsp;<span style="font-size:0.8em">&#128279;</span>(API)</a>
                 </td> 
                 <td class="dimenTable" style=""></td>
-                <td style="color:red;"><span style="color:blue;">Viewport size, changes with zoom.</span></td> 
+                <td style="color:red;"><span style="color:blue;">Viewport inner width, changes with zoom.</span></td> 
             </tr>
             <tr>
                 <td style="">window.innerHeight
@@ -135,7 +135,7 @@
                     <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/innerHeight" target="_blank" style="float:right;">&nbsp;<span style="font-size:0.8em">&#128279;</span>(API)</a>
                 </td> 
                 <td class="dimenTable" style=""></td>
-                <td style="color:red;"><span style="color:blue;">Viewport size, changes with zoom.</span></td> 
+                <td style="color:red;"><span style="color:blue;">Viewport inner height, changes with zoom.</span></td> 
             </tr>
             <tr>
                 <td style="">window.screen.width
@@ -151,7 +151,7 @@
                     <a href="https://developer.mozilla.org/en-US/docs/Web/API/Screen/height" target="_blank" style="float:right;">&nbsp;<span style="font-size:0.8em">&#128279;</span>(API)</a>
                 </td> 
                 <td class="dimenTable" style=""></td>
-                <td style="color:red;"><span style="color:green;">Total screen width.</span></td> 
+                <td style="color:red;"><span style="color:green;">Total screen height.</span></td> 
             </tr>
             <tr>
                 <td style="">window.screen.availWidth 
@@ -167,7 +167,7 @@
                     <a href="https://developer.mozilla.org/en-US/docs/Web/API/Screen/availHeight" target="_blank" style="float:right;">&nbsp;<span style="font-size:0.8em">&#128279;</span>(API)</a>
                 </td> 
                 <td class="dimenTable" style=""></td>
-                <td style="color:red;"><span style="color:purple;">Available width for browser content.</span></td> 
+                <td style="color:red;"><span style="color:purple;">Available height for browser content.</span></td> 
             </tr>
             <tr>
                 <td style="">$(window).outerWidth() 
