--- a/response-tool.html
+++ b/response-tool.html
@@ -90,7 +90,8 @@
         </div>
         <br>
         
-        &nbsp;&nbsp;<button id="elementSizeBtn" onclick="getSize()" style="">Get Size</button>
+        &nbsp;&nbsp;
+        <button id="elementSizeBtn" onclick="getSize()" style="">Get Size</button>
         <span id="showSize" style="margin-left:25px; font-size:24px; font-weight:bold;"></span>
         <br><br><hr>
     
