--- a/response-tool.html
+++ b/response-tool.html
@@ -40,7 +40,7 @@
         </div>    
         <br>
         <div id="equationPointsEntry">
-            &nbsp;&nbsp;Enter first viewport width:
+            &nbsp;&nbsp;Enter 1st viewport width:
            
                 <input list="equationPoint1List" id="equationPoint1" class="equationPoints1">
                 <datalist id="equationPoint1List">
@@ -52,7 +52,7 @@
                 <button onclick="equationPointInputClear(1)" class="equationPoints1ClearBtn">clear</button>
                 
             <br><br>
-            &nbsp;&nbsp;Enter first property size:
+            &nbsp;&nbsp;Enter 1st property size:
             <input list="equationPoint2List" id="equationPoint2" class="equationPoints1">
             <datalist id="equationPoint2List">
                 <option value="5.0">
@@ -67,7 +67,7 @@
             </datalist>
             <button onclick="equationPointInputClear(2)" class="equationPoints1ClearBtn">clear</button>
             <br><br>
-            &nbsp;&nbsp;Enter second viewport width:
+            &nbsp;&nbsp;Enter 2nd viewport width:
             <input list="equationPoint3List" id="equationPoint3" class="equationPoints1">
             <datalist id="equationPoint3List">
                 <option value="1920">
@@ -77,7 +77,7 @@
             </datalist>
             <button onclick="equationPointInputClear(3)" class="equationPoints1ClearBtn">clear</button>
             <br><br>
-            &nbsp;&nbsp;Enter second property size:
+            &nbsp;&nbsp;Enter 2nd property size:
             <input list="equationPoint4List" id="equationPoint4" class="equationPoints1">
             <datalist id="equationPoint4List">
                 <option value="5">
