--- a/response-tool.html
+++ b/response-tool.html
@@ -116,7 +116,11 @@
                 style="float:left; margin-left:10px;"> 
                 <img src="https://clipboardjs.com/assets/images/clippy.svg" style="width:30px;" alt="Copy to clipboard">
         </button><div style="clear:left;">&nbsp;</div>
+ 
         
+<!--************************************************************************************************************************************************-->
+<!-- Equation comment and copy buttons for exactly what's entered in the inputs. Has the '//' comment style and the '/* ... */' comment style -->
+    <div id="commentDiv1">
         <div style="background-color:lightgray; display:inline-block; margin:5px 0px 0px 10px; padding:5px 5px 5px 5px; border:1px solid black; border-radius:5px;">
             &nbsp;&nbsp;JS Comment of Inputs: <b><span id="viewWidth1"></span></b><b><span id="viewWidth2"></span></b>&nbsp;&nbsp;<br>
             <span id="commentJS5" style="color:red; 
@@ -133,6 +137,23 @@
                 <img src="https://clipboardjs.com/assets/images/clippy.svg" style="height:20px;" alt="Copy to clipboard">
             </button>
         </div> 
+        <div style="background-color:lightgray; display:inline-block; margin:5px 0px 0px 10px; padding:5px 5px 5px 5px; border:1px solid black; border-radius:5px;">
+            &nbsp;&nbsp;JS Comment of Inputs: <b><span id="viewWidth3"></span></b><b><span id="viewWidth4"></span></b>&nbsp;&nbsp;<br>
+            <span id="commentJS6" style="color:red; 
+                                        margin-left:10px; 
+                                        font-weight:bold;
+                                        padding:2px 10px;
+                                        border:1px solid black;
+                                        background-color:yellow;">AR comment</span>
+
+            <button id="copyCommentBtn" 
+                data-clipboard-action="copy"
+                data-clipboard-target="#commentJS6"
+                style="margin-left:10px; margin-top:5px;"> 
+                <img src="https://clipboardjs.com/assets/images/clippy.svg" style="height:20px;" alt="Copy to clipboard">
+            </button>
+        </div> 
+    </div> 
         <hr>
         
 <!--************************************************************************************************************************************************-->
